2001-10-04  Gerd Moellmann  <gerd@gnu.org>

	This handles unknown keysyms better than before.  For example,
	after `xmodmap -e 'keysym F5 = ccaron' in a Latin-1 environment,
	Emacs formerly completely ignored F5.  With the change, it derives
	a key symbol from the name of the X keysym, `ccaron' in this case.
	Reported by Martin Buchholz.

	* xterm.c (XTread_socket): Return a non_ascii_keystroke for
	unknown keysyms.

	* keyboard.c (make_lispy_event) [HAVE_X_WINDOWS]: If we know
	that EVENT->code isn't a function key, use the keysym's name.

2001-10-04  Gerd Moellmann  <gerd@gnu.org>

	FOREACH is a macro that should make it easier to loop over Lisp
	lists with checks for cycles and proper lists.

	* lisp.h (LIST_END_P, FOREACH): New macros.

2001-10-04  Gerd Moellmann  <gerd@gnu.org>

	On some systems, XtCloseDisplay seems to cause a SIGSEGV when
	called for a lost connection.  Prevent dumping core in this case.
	Instead print the X error, and exit.  On user request.

	* xterm.c (error_msg): New variable.
	(x_fatal_error_signal): New function.
	(x_connection_closed): Set error_msg.  Install x_fatal_error_signal
	as fatal_error_signal_hook around the call to XtCloseDisplay.

	* emacs.c (fatal_error_signal_hook): New variable.
	(fatal_error_signal): Call that function.

2001-10-04  Gerd Moellmann  <gerd@gnu.org>

	With this, Emacs prints how much pure storage it will
	approximately need in case pure storage overflows while dumping.

	* alloc.c (purebeg, pure_size, pure_bytes_used_before_overflow):
	New variables.
	(init_alloc_once): Initialize new variables.
	(PURE_POINTER_P): Use new variables.
	(pure_alloc): If pure storage overflows, allocate from the heap.
	(check_pure_size): New function.
	(Fgarbage_collect): Don't GC if pure storage has overflowed.

	* lisp.h (pure_size) [HAVE_SHM]: Declare extern size_t.
	(check_pure_size): Add prototype.

	* emacs.c (Fdump_emacs_data, Fdump_emacs): Call check_pure_size.

2001-10-04  Gerd Moellmann  <gerd@gnu.org>
